2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_synth.cdl: Don't run cache tests.

2002-04-10  Jonathan Larmour  <jlarmour@redhat.com>

	* src/synth.ld: Add RELOCS "section" and eh_frame section, plus
	correct use of .gnu.linkonce sections.

2002-02-28  Bart Veer  <bartv@redhat.com>

	* doc/synth.sgml, doc/makefile, doc/*.html:
	Documentation for the synthetic target HAL.

2002-01-25  Bart Veer  <bartv@redhat.com>

	* src/synth_intr.c (hal_interrupt_mask/unmask):
	Add preconditions that interrupts are disabled on entry, rather
	than disabling and reenabling the interrupts, since the
	specification requires the former.

2002-01-08  Jonathan Larmour  <jlarmour@redhat.com>
2001-11-01  Andrew Lunn	<andrew.lunn@ascom.ch>

	* include/hal_io.h: Support for mmap, lseek and open syscalls.
	* include/hal_cache.h: Add HAL_ICACHE_IS_ENABLED and
	HAL_DCACHE_IS_ENABLED.
	
2001-12-07  Bart Veer  <bartv@redhat.com>

	* include/hal_io.h: Added cyg_hal_sys_getcwd()

2001-08-02  Bart Veer  <bartv@redhat.com>

	* include/hal_intr.h:
	Note a subtle interaction between the interrupt handling
	and the context switch handling, which are in the
	architectural and variant HAL packages respectively.

2001-04-27  Bart Veer  <bartv@redhat.com>

	* All files
	Major reorganization and clean-up of the synthetic target.

2000-11-02  Jonathan Larmour  <jlarmour@redhat.com>

	* src/entry.c (_linux_entry): Extend memory using brk() syscall to
	match memory layout

	* src/syscall-i386-linux-1.0.S: Add brk syscall

2000-10-20  Jonathan Larmour  <jlarmour@redhat.com>

	* include/pkgconf/mlt_i386_linux_ram.mlt:
	Add heap1 section

	* include/pkgconf/mlt_i386_linux_ram.h:
	* include/pkgconf/mlt_i386_linux_ram.ldi:
	Regenerated

2000-10-20  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/hal_i386_linux.cdl: Correct memory layout file name

2000-03-03  John Dallaway  <jld@cygnus.co.uk>

	* cdl/hal_i386_linux.cdl (CYGBLD_GLOBAL_COMMAND_PREFIX):
