@@ -1,3 +1,8 @@
+2002-08-04  Bart Veer  <bartv@tymora.demon.co.uk>
+
+	* src/vectors.S (_start):
+	Store argv and environ in cyg_hal_sys_... variables
+
 2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>
 
 	* src/vectors.S:
